Andries: insert menu item plus gedoe

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/restaurant-hans_styles.css" />
+    <link rel="stylesheet" href="assets/css/molveno_styles.css" />
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -40,41 +40,37 @@
       </nav>
     </header>
     <main id="page">
-      <header class="page-header">
-        <h2>Dashboard</h2>
-        <nav id="page-navigation">
-          <ul>
-            <li class="current"><a href="#">Dashboard</a></li>
-          </ul>
-        </nav>
-        <!--<nav>
-          <ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Active</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#">Disabled</a>
-  </li>
-</ul>
-        </nav>-->
 
-      </header>
+      <section class="page dashboard">
 
-      <article class="page-content">
-        <section>
-          <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-        </section>
-      </article>
+        <header class="page-header">
+          <h2>Dashboard</h2>
+          <nav id="page-navigation">
+            <ul>
+              <li class="current"><a href="#">Dashboard</a></li>
+            </ul>
+          </nav>
+        </header>
 
-      <footer class="page-footer">
+        <article class="page-content">
+          <section>
+            <h1>Welcome</h1>
+            <p>Start managing by choosing an option on the left.</p>
+          </section>
+        </article>
 
-      </footer>
+        <footer class="page-footer page-content">
+          <div class="row">
+            <div class="col-sm-8">
+              <!-- Some footer content can be placed here. -->
+            </div>
+            <div class="col-sm-4 footer-branding">
+              <h1 class="site-branding">Molveno Lake Resort</h1>
+            </div>
+          </div>
+        </footer>
+
+      </section>
 
     </main>
     <script src="assets/js/jquery-3.3.1.min.js"></script>
