Andries: overview menuitems

--- a/pages/menuitems.html
+++ b/pages/menuitems.html
@@ -1,14 +1,14 @@
 <section class="page menu">
 
   <header class="page-header">
-    <h2>Manage Menu</h2>
+    <h2>Manage Menu Items</h2>
     <nav id="page-navigation">
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link active" href="#menu/overview">Overview</a>
+          <a class="nav-link active" href="#menuitems/overview">Overview</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#menu/add"><i class="fas fa-plus"></i>Insert New Menu Item...</a>
+          <a class="nav-link" href="#menuitems/add"><i class="fas fa-plus"></i>Insert New Menu Item...</a>
         </li>
       </ul>
     </nav>
